# spectre

./: ParallelInfoExecutablePage.html  RandomAmrExecutablePage.html  annotated.html  beginners_guide.html  brigand.html  build_profiling_and_optimization.html  citelist.html  classActionTesting_1_1MockDistributedObject-members.html  classActionTesting_1_1MockDistributedObject.html  classActionTesting_1_1MockRuntimeSystem-members.html  classActionTesting_1_1MockRuntimeSystem.html  classAlgorithmArray-members.html  classAlgorithmArray.html  classAlgorithmGroup-members.html  classAlgorithmGroup.html  classAlgorithmNodegroup-members.html  classAlgorithmNodegroup.html  classAlgorithmSingleton-members.html  classAlgorithmSingleton.html  classAverager-members.html  classAverager.html  classBinaryTrajectories-members.html  classBinaryTrajectories.html  classBlock-members.html  classBlock.html  classBlockNeighbor-members.html  classBlockNeighbor.html  classBurgers_1_1AnalyticData_1_1Sinusoid-members.html  classBurgers_1_1AnalyticData_1_1Sinusoid.html  classBurgers_1_1BoundaryConditions_1_1BoundaryCondition-members.html  classBurgers_1_1BoundaryConditions_1_1BoundaryCondition.html  classBurgers_1_1BoundaryConditions_1_1DemandOutgoingCharSpeeds-members.html  classBurgers_1_1BoundaryConditions_1_1DemandOutgoingCharSpeeds.html  classBurgers_1_1BoundaryConditions_1_1Dirichlet-members.html  classBurgers_1_1BoundaryConditions_1_1Dirichlet.html  classBurgers_1_1BoundaryConditions_1_1DirichletAnalytic-members.html  classBurgers_1_1BoundaryConditions_1_1DirichletAnalytic.html  classBurgers_1_1BoundaryCorrections_1_1BoundaryCorrection-members.html  classBurgers_1_1BoundaryCorrections_1_1BoundaryCorrection.html  classBurgers_1_1BoundaryCorrections_1_1Hll-members.html  (+8063 more)
doc_coverage/: index-sort-l.html  index.html
doc_coverage/ApparentHorizons/: ComputeExcisionBoundaryVolumeQuantities.hpp.gcov.html  ComputeHorizonVolumeQuantities.hpp.gcov.html  ComputeItems.hpp.gcov.html  FastFlow.hpp.gcov.html  HorizonAliases.hpp.gcov.html  ObserveCenters.hpp.gcov.html  StrahlkorperCoordsInDifferentFrame.hpp.gcov.html  StrahlkorperGr.hpp.gcov.html  Tags.hpp.gcov.html  (+5 more)
py/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_18.js  classes_19.js  classes_2.js  (+185 more)
src/Evolution/Executables/RadiationTransport/M1Grey/: CMakeLists.txt  EvolveM1Grey.hpp
src/PointwiseFunctions/AnalyticData/RadiationTransport/M1Grey/: AnalyticData.hpp  CMakeLists.txt  Factory.hpp  HomogeneousSphere.cpp  HomogeneousSphere.hpp  RotationallySymmetric.hpp  RotationallySymmetric.tpp  SphericalGaussian.cpp  SphericalGaussian.hpp
tests/Unit/Evolution/Systems/RadiationTransport/M1Grey/: CMakeLists.txt  Test_InitialGuess.cpp  Test_System.cpp
tests/Unit/PointwiseFunctions/AnalyticData/RadiationTransport/M1Grey/: CMakeLists.txt  Test_HomogeneousSphere.cpp  Test_RotationallySymmetric.cpp  Test_SphericalGaussian.cpp
(+2632 files in other folders)
