# Distributed under the MIT License.
# See LICENSE.txt for details.

set(LIBRARY "Test_M1GreyAnalyticData")

set(LIBRARY_SOURCES
  Test_HomogeneousSphere.cpp
  Test_RotationallySymmetric.cpp
  Test_SphericalGaussian.cpp
  )

add_test_library(${LIBRARY} "${LIBRARY_SOURCES}")

target_link_libraries(
  ${LIBRARY}
  PRIVATE
  M1GreyAnalyticData
  DataStructures
  DataStructuresHelpers
  )
